<resources>
    <string name="app_name">Brewery Guide</string>
    <string name="brewery_name">Brewery Name</string>
    <string name="type">Type:</string>
    <string name="country">Country:</string>
    <string name="alpha_50" translatable="false">0.5</string>
    <string name="loading_error">Loading error!</string>
    <string name="retry">Try again!</string>
    <string name="cancel">Cancel</string>
    <string name="street">Street:</string>
    <string name="address2">Address 2:</string>
    <string name="address3">Address 3:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="province">Country province:</string>
    <string name="post">Postal code:</string>
    <string name="phone">Phone:</string>
    <string name="site">Website:</string>
    <string name="updated">Updated:</string>
    <string name="created">Created:</string>
</resources>