<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/margin_8"
    app:cardCornerRadius="@dimen/radius_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_4">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:textSize="@dimen/text_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/brewery_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/typeHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:alpha="@string/alpha_50"
        android:text="@string/type"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/typeHeaderTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        tools:text="@string/type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countryHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:alpha="@string/alpha_50"
        android:text="@string/country"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeHeaderTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/countryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toEndOf="@id/countryHeaderTextView"
        app:layout_constraintTop_toBottomOf="@+id/typeTextView"
        tools:text="@string/country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>