<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/padding_4">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8"
                android:textSize="@dimen/text_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/brewery_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/typeHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/type"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/typeHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                tools:text="@string/type" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/streetHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/street"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/streetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/streetHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/typeTextView"
                tools:text="@string/street" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/secondAddrHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/address2"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/streetHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/secondAddrTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/secondAddrHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/streetTextView"
                tools:text="@string/address2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thirdAddrHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/address3"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondAddrHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/thirdAddrTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/thirdAddrHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/secondAddrTextView"
                tools:text="@string/address3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cityHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/city"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thirdAddrHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/cityHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/thirdAddrTextView"
                tools:text="@string/city" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stateHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/state"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/stateHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/cityTextView"
                tools:text="@string/state" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provinceHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/province"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stateHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/provinceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/provinceHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/stateTextView"
                tools:text="@string/province" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/postHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/post"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provinceHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/postTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/postHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/provinceTextView"
                tools:text="@string/post" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countryHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/country"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/countryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/countryHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/postTextView"
                tools:text="@string/country" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phoneHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/phone"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countryHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phoneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/phoneHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/countryTextView"
                tools:text="@string/phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/siteHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/site"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/siteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/siteHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
                tools:text="@string/site" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createdHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/created"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/createdHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/siteTextView"
                tools:text="@string/created" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updatedHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:alpha="@string/alpha_50"
                android:text="@string/updated"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createdHeaderTextView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/updatedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toEndOf="@id/updatedHeaderTextView"
                app:layout_constraintTop_toBottomOf="@+id/createdTextView"
                tools:text="@string/updated" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/detailsProgressBar"
        layout="@layout/item_progress_bar" />

</FrameLayout>